all problem fix up

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_BACKEND_URL=https://api.lawbie.com
+# NEXT_PUBLIC_BACKEND_URL=https://jessicarosen151-backend-gmjx.onrender.com
 # NEXT_PUBLIC_BACKEND_URL=https://api.lawbie.comd
-# NEXT_PUBLIC_BACKEND_URL=http://localhost:5000
+NEXT_PUBLIC_BACKEND_URL=http://localhost:5000
 
 NEXTAUTH_SECRET=ED+m+LMdq3B+lmNB0nX4JI1MhDfwGWP7SGcP5zM8ia0=
-NEXTAUTH_URL=http://localhost:3001
+NEXTAUTH_URL=http://localhost:3000
